--- a/pev/polls/templates/polls/vote/view_scroll.html
+++ b/pev/polls/templates/polls/vote/view_scroll.html
@@ -1,32 +1,43 @@
-{% extends 'view_mode.html' %}
-
-{% block content %}
+{% extends 'view_mode.html' %} {% block content %}
 
 <div class="container">
-<form hx-post="{% url 'polls:submit_choices' %}" hx-trigger="submit" hx-target="#survey_result">
-    {% for poll in polls %}
-        <h2>{{ poll.text }}</h2>
-        {% for key, choice_sets in choices.items %}
-            <div class="row">
-            {% for choice in choice_sets %}
-            <div class="col-4">
-            <label>
-                <input type="radio" name="poll_{{ poll.id }}" value="{{ choice.id }}">
-                {{ choice.text }}
-            </label><br>
-            </div>
+	<form hx-post="{% url 'polls:submit_choices' %}" hx-trigger="submit" hx-target="#survey_result">
+		{% csrf_token %}
 
-            {% endfor %}
-            </div>
+		{% for poll in polls %}
+		<h2>{{ poll.text }}</h2>
+		{% for key, choice_sets in choices.items %}
+		{% if poll.id == key %}
+		<div class="row">
+			{% for choice in choice_sets %}
+			<div class="col-4">
+				<label>
+					<input type="radio" name="poll_{{ poll.id }}" value="{{ choice.id }}"
+					{% for selected_choice in selected_choices %}
+					    {% if selected_choice == choice.id %} checked {% endif %}
+					    {% if selected_choice or not is_active %} disabled {% endif %}
+					{% endfor %} required >
+					{{ choice.text }}
+				</label>
+				<br />
+			</div>
+			{% endfor %}
+		</div>
+		{% endif %}
+		{% endfor %}
+		<input type="hidden" name="poll_ids[]" value="{{ poll.id }}" />
+		<br />
+		<br />
+		{% endfor %}
+		<div class="container-fluid">
+		{% if not is_valid %}
+		    <button type="submit" class="btn btn-success mt-3 align-self-end">Submit All</button>
+	    {% else %}
+		    <a class="btn btn-secondary align-self-end" href="#" role="button"}>Reset</a>
+		{% endif %}
+		</div>
+	</form>
 
-        {% endfor %}
-        <input type="hidden" name="poll_ids[]" value="{{ poll.id }}">
-        <br><br>
-    {% endfor %}
-    <button type="submit">Submit Choices for All Polls</button>
-</form>
-
-<div id="survey_result"></div>
-
+	<div id="survey_result"></div>
 </div>
 {% endblock content %}
