add vote reset, thank you page

--- a/pev/polls/templates/polls/partials/radio_choice.html
+++ b/pev/polls/templates/polls/partials/radio_choice.html
@@ -9,6 +9,7 @@
             {% if selected_choice_id or not is_active %}
             disabled
             {% endif %}
+            required
             >
         {{ choice.text }}
     </label>
