--- a/pev/polls/templates/polls/vote/view_page.html
+++ b/pev/polls/templates/polls/vote/view_page.html
@@ -2,23 +2,31 @@
 {% block content %}
 
 <div class="container">
-    <h1>{{ poll.text }}</h1>
+    <div class="d-flex justify-content-between">
+       <div class="col-mt-3 text-justify">
+        <h1>{{ poll.text }}</h1>
+       </div>
+       <div>
+         {% if is_survey_completed %}
+            {% include 'polls/partials/survey_complete.html' %}  
+         {% endif %}
+       </div>
+    </div>
     <hr>
     <div class="wrap" style="flex-grow: 1;">
         <div role="navigation">
             <div class="row">
               {% include 'polls/partials/dropdown_poll.html' %}
-                <div class="col-5 ml-3">
+                <div class="col-4 ml-4">
                     {% include 'polls/partials/navigation_poll.html' %}
                 </div>
-
             </div>
         </div>
     </div>
     <hr>
     <br/>
     <div id="form-choices">
-    <form method="post" action="{% url 'polls:page_view' poll.pk %}">
+    <form method="post" action="{% url 'polls:submit_choice' poll.pk %}">
     {% csrf_token %}
     {% include 'polls/partials/radio_choice.html' %}
     </div>
@@ -29,7 +37,7 @@
             <a class="btn btn-secondary mt-3 align-self-end" href="{% url 'polls:reset_vote' vote.pk %}" role="button">Reset</a>
         {% endif %}
         {% if poll.survey.owner == request.user %}
-        <a class="btn btn-warning mt-3 align-self-end" href="{% url 'surveys:survey_detail' poll.survey.pk %}" role="button">Cancel</a>
+        <a class="btn btn-warning mt-3 align-self-end" href="{% url 'surveys:survey_detail' poll.survey.pk %}" role="button">Back</a>
         {% else %}
         <a class="btn btn-warning mt-3 align-self-end" href="{% url 'surveys:survey_index' %}" role="button">Return</a>
         {% endif %}
