--- a/pev/polls/templates/polls/vote/view_scroll.html
+++ b/pev/polls/templates/polls/vote/view_scroll.html
@@ -1,7 +1,7 @@
 {% extends 'view_mode.html' %} {% block content %}
 
 <div class="container">
-	<form hx-post="{% url 'polls:submit_choices' %}" hx-trigger="submit" hx-target="#survey_result">
+	<form method="post" action="{% url 'polls:submit_choices' %}"> 
 		{% csrf_token %}
 
 		{% for poll in polls %}
@@ -30,10 +30,14 @@
 		<br />
 		{% endfor %}
 		<div class="container-fluid">
+		{% if is_survey_completed %}
+			{% include 'polls/partials/survey_complete.html' %}
+		{% endif %}
+
 		{% if not is_valid %}
 		    <button type="submit" class="btn btn-success mt-3 align-self-end">Submit All</button>
 	    {% else %}
-		    <a class="btn btn-secondary align-self-end" href="{% url 'polls:scroll_reset' %}" role="button"}>Reset</a>
+		    <a class="btn btn-secondary align-self-end" href="{% url 'polls:scroll_reset' survey.pk %}" role="button"}>Reset</a>
 		{% endif %}
 		</div>
 	</form>
