--- a/pev/templates/includes/navbar.html
+++ b/pev/templates/includes/navbar.html
@@ -17,6 +17,7 @@
         <div class="navbar-nav ml-auto">
             {% if request.user.is_authenticated %}
             <a class="nav-link" href="{% url 'accounts:logout' %}">Logout</a>
+            <a class="nav-link" href="{% url 'accounts:profile' %}">{{request.user.username}}</a>
             {% else %}
             <a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
             <a class="nav-link" href="{% url 'accounts:register' %}">Register</a>
