--- a/pev/surveys/templates/surveys/results.html
+++ b/pev/surveys/templates/surveys/results.html
@@ -16,7 +16,8 @@
     <h2> {{ survey.title }} </h2>
     <p> {{ survey.description }} </p>
     {% for poll in polls %}
-        <div id="poll-chart" hx-get="{% url 'polls:result_poll' poll.pk %}" hx-trigger="load"></div> 
+        <div id="poll-chart" hx-get="{% url 'polls:result_sex' poll.pk %}" hx-trigger="load"></div>
+        <div id="poll-chart" hx-get="{% url 'polls:table_sex' poll.pk %}" hx-trigger="load"></div> 
     {% endfor %}
     </div>
 </ul>
