--- a/pev/surveys/templates/surveys/detail.html
+++ b/pev/surveys/templates/surveys/detail.html
@@ -2,9 +2,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-md-8 offset-md-2">
+       <div class="col-md-8 offset-md-2">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">
+                        <strong>Share </strong>
+                        <i class="fa fa-link" aria-hidden="true"> </i>
+                     </span>
+                </div>
+                <input type="text" class="form-control" id="sharedUrl" value="{{ shared_url }}" placeholder="Share this url" readonly>
+                <div class="input-group-append">
+                    <button class="btn btn-outline-secondary" type="button" id="copyButton">Copy</button>
+                </div>
+            </div>
             <hr>
             <h3 class="text-center mb-5">{{ survey.title }}</h3>
             <blockquote class="blockquote">{{ survey.description }} </blockquote>
@@ -24,4 +36,13 @@
         </div>
     </div>
 </div>
+<script>
+    document.getElementById("copyButton").addEventListener("click", function()
+    {
+        var copyText = document.getElementById("sharedUrl");
+        copyText.select();
+        document.execCommand("copy");
+        alert("Link is copied");
+    });
+</script>
 {% endblock content %}
