--- a/pev/surveys/templates/surveys/detail.html
+++ b/pev/surveys/templates/surveys/detail.html
@@ -36,6 +36,8 @@
         </div>
     </div>
 </div>
+
+<!-- Defined the link copier for respondents --> 
 <script>
     document.getElementById("copyButton").addEventListener("click", function()
     {
@@ -45,4 +47,5 @@
         alert("Link is copied");
     });
 </script>
+
 {% endblock content %}
