--- a/pev/templates/home.html
+++ b/pev/templates/home.html
@@ -11,7 +11,7 @@
         <div class="col">
             <div id="home-content">
                 <h1>Analysen Kompass</h1>
-                <h3>Control your future, stop waiting!</h3>
+                <h3>Engaging Users in Interactive Polling!</h3>
                 <a href="{% url 'surveys:survey_index' %}"><button class="btn btn-primary me-2">Get Started</button></a>
             </div>
         </div>
